--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', post: Post.new %>
+
+<h1>New Post</h1>
+<%= form_for @post do |f| %>
+    <%= f.label :title, "Title" %><br>
+    <%= f.text_field :title %><br><br>
+    <%= f.label :content, "Content" %><br>
+    <%= f.text_area :content %><br><br>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+        <%= f.fields_for :categories, @post.categories.build do |categories_fields| %>
+            <%= categories_fields.label "New Category" %>
+            <%= categories_fields.text_field :name %>
+        <% end %>
+    <%= f.submit %>
+<% end %>
