--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,39 @@
+<h1><%= @post.title %></h1>
+<p>
+    <%= @post.content %>
+</p>
+<h2>Categories</h2>
+<ul>
+    <% @post.categories.each do |category| %>
+        <li><%= link_to category.name, category_path(category) %></li>
+    <% end %>
+</ul>
+<h2>Comments</h2>
+<ul>
+    <% @post.comments.each do |comment| %>
+        <% comment_user = User.find_by_id(comment.user_id) %>
+        <li><%= link_to comment_user.username, user_path(comment_user) %> - <%= comment.content %></li>
+    <% end %>
+</ul>
+<h2>Users who have commented on this post:</h2>
+<ul>
+<% @post.users.distinct.each do |user| %>
+    <li>
+      <%= link_to user.username, user_path(user) %>
+    </li>
+  <% end %>
+</ul>
+<h2>Comment Form</h2>
+<%= form_for(@comment) do |f| %>
+    <%= f.hidden_field :post_id %>
+    <%= f.label "Select User" %><br>
+    <%= f.collection_select :user_id, User.all, :id, :username %><br><br>
+        <%= f.fields_for :user, User.new do |commentor| %>
+            <%= commentor.label "User Name" %>
+            <%= commentor.text_field :username %>
+        <% end %>
+    <%= f.label "Content" %><br>
+    <%= f.text_field :content %><br><br>
+    <%= f.submit %>
+<% end %>
 
